<resources>
    <string name="app_name">AsciiCam</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
	<string name="logo">AsciiCam</string>
	<string name="btn_pic">Take A Picture</string>
	<string name="btn_gallery">Gallery</string>
	<string name="btn_options">Options</string>
	<string name="btn_exit">Exit</string>
</resources>


    
    